[package]
name = "risk-engine"
version = "0.1.0"
edition = "2021"
authors = ["Griffin Oduol <@GriffinOduol>"]
description = "Predictive Risk Engine for Compound V3 - CometGuard"
license = "MIT"

[dependencies]
# Ethereum interaction
ethers = { version = "2.0.14", features = ["ws", "rustls", "abigen"] }
# Async runtime
tokio = { version = "1.28", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Error handling
anyhow = "1.0"
thiserror = "1.0"
# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
# CLI interface
clap = { version = "4.3", features = ["derive"] }
# HTTP client for API calls
reqwest = { version = "0.11", features = ["json"] }
# Data types and utilities
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
# Environment variables
dotenv = "0.15"
# Testing
mockall = "0.11"
# Caching
moka = { version = "0.10", features = ["future"] }
# Parallel processing
rayon = "1.7"

[dev-dependencies]
# Testing
tokio-test = "0.4"
rstest = "0.18"
tempfile = "3.8"
